deployment/pda-propiedades-command.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "pda-propiedades-command"
  namespace: "default"
  labels:
    app: "pda-propiedades-command"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "pda-propiedades-command"
  template:
    metadata:
      labels:
        app: "pda-propiedades-command"
    spec:
      containers:
      - name: "pda-propiedades-command"
        image: "us-central1-docker.pkg.dev/alpes-propiedades/alpes-propiedades/propiedades-command:latest"
---
apiVersion: v1
kind: Service
metadata:
  name: pda-propiedades-command-service
  namespace: default
  labels:
    app: pda-propiedades-command
spec:
  type: LoadBalancer
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
  selector:
    app: pda-propiedades-command
