deployment/pda-propiedades-query.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "pda-propiedades-query"
  namespace: "default"
  labels:
    app: "pda-propiedades-query"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "pda-propiedades-query"
  template:
    metadata:
      labels:
        app: "pda-propiedades-query"
    spec:
      containers:
      - name: "pda-propiedades-query"
        image: "us-central1-docker.pkg.dev/alpes-propiedades/alpes-propiedades/propiedades-query:3.0.0"
---
apiVersion: v1
kind: Service
metadata:
  name: pda-propiedades-query-service
  namespace: default
  labels:
    app: pda-propiedades-query
spec:
  type: ClusterIP  # Change this from LoadBalancer to ClusterIP
  ports:
    - port: 80
      targetPort: 5002
      protocol: TCP
  selector:
    app: pda-propiedades-query
