deployment/transacciones-command.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "transacciones-command"
  namespace: "default"
  labels:
    app: "transacciones-command"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "transacciones-command"
  template:
    metadata:
      labels:
        app: "transacciones-command"
    spec:
      containers:
      - name: "transacciones-command"
        image: "us-central1-docker.pkg.dev/alpes-propiedades/alpes-propiedades/transacciones-command:3.0.0"
---
apiVersion: v1
kind: Service
metadata:
  name: transacciones-command-service
  namespace: default
  labels:
    app: transacciones-command
spec:
  type: ClusterIP  # Change this from LoadBalancer to ClusterIP
  ports:
    - port: 80
      targetPort: 5003
      protocol: TCP
  selector:
    app: transacciones-command
