deployment/transacciones-query.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "transacciones-query"
  namespace: "default"
  labels:
    app: "transacciones-query"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "transacciones-query"
  template:
    metadata:
      labels:
        app: "transacciones-query"
    spec:
      containers:
      - name: "transacciones-query"
        image: "us-central1-docker.pkg.dev/alpes-propiedades/alpes-propiedades/transacciones-query:3.0.0"
---
apiVersion: v1
kind: Service
metadata:
  name: transacciones-query-service
  namespace: default
  labels:
    app: transacciones-query
spec:
  type: ClusterIP  # Change this from LoadBalancer to ClusterIP
  ports:
    - port: 80
      targetPort: 5004
      protocol: TCP
  selector:
    app: transacciones-query
